Added uiFilesystem directive

--- a/resources/angular-views/directive-partials/ui-avatar.html
+++ b/resources/angular-views/directive-partials/ui-avatar.html
@@ -1,5 +1,6 @@
 
-<!-- Main wrapper -->
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <div class="ui-avatar-container" ng-style="{width: containerWidth}">
 
     <!-- Avatar container -->
