--- a/resources/angular-views/profile/list.html
+++ b/resources/angular-views/profile/list.html
@@ -9,28 +9,19 @@
         </h1>
     </header>
 
-    <div class="row">
-        <div class="col-sm-12">
+    <div ng-if="global.data.isFetchingProfiles === false" class="row">
+        <ui-filesystem
+            data-id="profiles-explorer"
+            data-files="profileList"
+            data-hide-location="true"
+            data-hide-small-tiles-layout="true"
+            data-list-params="profileListParams"
+            class="col-sm-12">
+        </ui-filesystem>
+    </div>
 
-            <!-- New profile button -->
-            <!-- TODO: figure out why the right margin is needed -->
-            <a
-                href="#/profile/create"
-                class="btn btn-info btn-metro"
-                style="margin-right: 0">
-
-                <i class="fa fa-plus"></i>
-            </a>
-
-            <a
-                ng-repeat="profile in profiles"
-                ng-show="profile.id"
-                href="#/profile/{{ profile.id }}"
-                class="btn btn-info btn-metro"
-                style="background-image: url({{ profile.avatarSrc || '' }});">
-
-                <div class="btn-title">{{ profile.lastName.toUpperCase() | characters:30 }}</div>
-            </a>
-        </div>
+    <div ng-if="global.data.isFetchingProfiles === true" class="loading-notice">
+        <h3>Retrieving Athletes</h3>
+        <i class="fa fa-spinner fa-spin fa-2x"></i>
     </div>
 </div>
