--- a/resources/angular-views/movements/explorer/index.html
+++ b/resources/angular-views/movements/explorer/index.html
@@ -158,6 +158,6 @@
         <br>
         <br>
 
-        Take this opportunity to <a href="#/profile/create">create one</a>.
+        Take this opportunity to <a href="#/profiles/create">create one</a>.
     </div>
 </div>
