--- a/resources/angular-views/group/list.html
+++ b/resources/angular-views/group/list.html
@@ -70,7 +70,7 @@
             <a
                 ng-repeat="group in global.data.group.list"
                 ng-show="group.id"
-                href="#/group/{{ group.id }}"
+                href="#/groups/{{ group.id }}"
                 class="btn btn-info btn-metro"
                 style="background-image: url({{ group.avatarSrc || '' }})">
 
