--- a/resources/angular-views/screenings/live/index.html
+++ b/resources/angular-views/screenings/live/index.html
@@ -9,26 +9,25 @@
         </h1>
 
         <!-- Append profile name to page title -->
-        <div ng-show="global.getSelectedProfile().id > 0 && global.data.isFetchingScreeningData === false" class="h1-append">
-            for {{ global.getSelectedProfile().firstName }} {{ global.getSelectedProfile().lastName }}
-
-            <small>
-                <a ng-click="global.store.profileId = 0" href="javascript:;">
-                    (change)
-                </a>
-            </small>
+        <div ng-if="screening.id > 0" class="h1-append">
+            <a ng-click="resetScreening()" href="javascript:;">
+                (save and close)
+            </a>
         </div>
     </header>
 
     <!-- Test progress -->
-    <div ng-show="screening.id > 0 && global.data.isFetchingScreeningData === false">
+    <div ng-if="!global.data.isFetchingLiveScreening && screening.id > 0">
 
         <h2 class="text-center">
             {{ screening.title }}
 
             <br>
             <small>
-                {{ screening.createdAt | mysqlDate:'d / M / yyyy' }}
+                {{ screening.createdAt | mysqlDate:'d / M / yyyy' }} -
+                <a href="#/profiles/{{ profile.id }}">
+                    {{ profile.firstName }} {{ profile.lastName }}
+                </a>
             </small>
         </h2>
 
@@ -49,7 +48,7 @@
             </div>
 
             <div class="col-md-1">
-                {{ movement.score | number:0 }} / {{ movement.scoreMax }}
+                {{ movement.score | number:0 }} / {{ movement.scoreMax | number:0 }}
             </div>
 
             <!-- Movement actions -->
@@ -93,59 +92,45 @@
     </div>
 
     <!-- Select a screening template -->
-    <div ng-show="screening.id === 0 && global.data.isFetchingScreeningData === false">
+    <div ng-if="!global.data.isFetchingLiveScreening && screening.id === 0">
 
-        <!-- Temporary listing -->
+        <!-- Create a screening -->
         <div
-            ng-show="global.getSelectedProfile().id > 0
-                && global.data.isPreparingNewScreening === false">
+            ng-show="global.getSelectedProfile().id > 0 && !global.data.isPreparingNewScreening"
+            class="text-center">
 
-            <div class="callout-elem callout-elem-info">
-                <p>
-                    Start by selecting a test template:
-                </p>
-            </div>
+            <a
+                ng-click="createFunctionalMovementScreening()"
+                href="javascript:;"
+                class="btn btn-primary btn-circle btn-lg">
 
-            <div class="col-md-4 col-md-offset-4">
-                <a ng-click="createFunctionalMovementScreening()" href="javascript:;">
-                    <i class="fa fa-plus fa-fw"></i> Functional Movement Test
-                </a>
-                <br>
+                <i class="fa fa-plus"></i>
+            </a>
 
-                <a ng-click="global.alert('In Development.')" href="javascript:;">
-                    <i class="fa fa-plus fa-fw"></i> Create a Custom Movement Test
-                </a>
-            </div>
+            <h3>
+                Start a movement test for
+                <em>
+                    {{ global.getSelectedProfile().firstName }}
+                    {{ global.getSelectedProfile().lastName }}
+                </em>.
+            </h3>
+            Go ahead and use the <i class="fa fa-plus fa-lg fa-fw"></i> button above to start.
         </div>
 
         <!-- Select a profile -->
-        <div
-            ng-show="global.getSelectedProfile().id === 0
-                && global.data.isPreparingNewScreening === false">
-
+        <div ng-show="global.getSelectedProfile().id === 0 && !global.data.isPreparingNewScreening">
             <div ng-include="'partials/select-profile.html'"></div>
         </div>
 
         <!-- Preparing screening records -->
-        <div ng-show="global.data.isPreparingNewScreening === true">
-
-            <br>
-            <h2 class="text-center">
-                Preparing Your Test
-            </h2>
-
-            <br>
-            <br>
-            <div class="text-center">
-                <i class="fa fa-spinner fa-spin fa-2x"></i>
-            </div>
+        <div ng-show="global.data.isPreparingNewScreening" class="loading-notice">
+            <h2>Preparing your test.</h2>
+            <i class="fa fa-spinner fa-spin fa-2x"></i>
         </div>
     </div>
 
     <!-- Loading screening data -->
-    <div ng-show="global.data.isFetchingScreeningData === true">
-        <div class="text-center" style="margin: 60px auto">
-            <i class="fa fa-spinner fa-spin fa-2x"></i>
-        </div>
+    <div ng-if="global.data.isFetchingLiveScreening">
+        <ng-include src="'partials/loading.html'"></ng-include>
     </div>
 </div>
