Updated uiEditableFields directive

--- a/resources/angular-views/directive-partials/ui-editable-fields/field-value-with-units.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/field-value-with-units.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div ng-show="state != 'editing'" class="row no-gutter ui-editable-field-value">
+<div ng-show="state == 'idle'" class="row no-gutter ui-editable-field-value">
 
     <!-- Unit selector -->
     <div class="col-xs-2 text-center">
@@ -22,12 +22,17 @@
     <div class="col-xs-10">
 
         <!-- Displayed data -->
-        <a href="javascript:;" class="edit-text">
+        <a ng-click="edit()" href="javascript:;" class="edit-text">
             {{ data.displayStr }}
         </a>
 
         <!-- Edit icons -->
-        <a ng-hide="isDisabled" href="javascript:;" class="edit-icon fa fa-pencil"></a>
-        <i ng-show="isDisabled" class="edit-icon fa fa-ban"></i>
+        <a ng-if="!isDisabled" ng-click="edit()" href="javascript:;" class="edit-icon fa fa-pencil"></a>
+        <i ng-if="isDisabled" class="edit-icon fa fa-ban"></i>
     </div>
+</div>
+
+<div ng-show="state == 'saving'" class="ui-editable-field-value ui-editable-fields-muted">
+    {{ data.displayStr }}
+    <i class="fa fa-spinner fa-spin fa-fw"></i>
 </div>
