--- a/resources/angular-views/group/list.html
+++ b/resources/angular-views/group/list.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div class="page page-dashboard">
+<div class="page group-page">
     <header>
         <h1>
             Teams <i class="fa fa-users"></i>
@@ -15,6 +15,7 @@
         <ui-filesystem
             data-id="groups-explorer"
             data-files="groupList"
+            data-default-layout="large-tiles"
             data-hide-location="true"
             data-config="uiFilesystemConfig"
             class="col-sm-12">
