--- a/resources/angular-views/profile/list.html
+++ b/resources/angular-views/profile/list.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div class="page page-dashboard">
+<div class="page profile-page">
     <header>
         <h1>
             Athletes <i class="fa fa-user"></i>
@@ -13,6 +13,7 @@
         <ui-filesystem
             data-id="profiles-explorer"
             data-files="profileList"
+            data-default-layout="small-tiles"
             data-hide-location="true"
             data-config="uiFilesystemConfig"
             class="col-sm-12">
