--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -140,8 +140,8 @@
                         </div>
                     </div>
 
-                    <!-- DEMO -->
-                    <div class="row">
+                    <!-- Placeholder for NFL Techrunch demo -->
+                    <div ng-if="false" class="row">
                         <div class="col-xs-12 col-sm-6">
 
                             <!-- Hand size -->
@@ -206,7 +206,8 @@
                         <div class="col-xs-12 col-sm-6">
                             <ui-editable-field
                                 data-label="Phone #"
-                                data-key="phone">
+                                data-key="phone"
+                                data-empty="(xxx) xxx-xxxx">
                             </ui-editable-field>
                         </div>
 
@@ -214,7 +215,8 @@
                         <div class="col-xs-12 col-sm-6">
                             <ui-editable-field
                                 data-label="Email"
-                                data-key="email">
+                                data-key="email"
+                                data-empty="address@example.com">
                             </ui-editable-field>
                         </div>
                     </div>
@@ -295,7 +297,7 @@
 
             <!-- General notes -->
             <div class="col-xs-12 col-lg-4">
-        		<div class="col-xs-12">
+        		<div class="col-xs-12" style="margin-bottom: 15px">
                     <ui-editable-standalone-field
                         data-heading="Medical Information"
                         data-model="profile"
@@ -306,7 +308,7 @@
                     </ui-editable-standalone-field>
                 </div>
 
-                <div class="col-xs-12">
+                <div class="col-xs-12" style="margin-bottom: 15px">
                     <ui-editable-standalone-field
                         data-heading="Previous Injuries"
                         data-model="profile"
@@ -341,7 +343,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12">
+                <div class="col-xs-12" style="margin-bottom: 15px">
                     <ui-editable-standalone-field
                         data-heading="Other Notes"
                         data-model="profile"
