--- a/resources/angular-views/screenings/index.html
+++ b/resources/angular-views/screenings/index.html
@@ -37,7 +37,7 @@
                             href="javascript:;"
                             style="margin-left: 10px">
 
-                            &rarr; continue
+                            <i class="fa fa-pencil-square-o"></i>
                         </a>
                     </td>
                     <td class="text-center">
