--- a/resources/angular-views/screenings/live/index.html
+++ b/resources/angular-views/screenings/live/index.html
@@ -1,10 +1,10 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div class="page">
+<div class="page screening-page">
     <header>
         <h1>
-            Movement Test <i class="fa fa-pencil-square-o"></i>
+            Live Test <i class="fa fa-list-alt"></i>
             <span></span>
         </h1>
 
@@ -19,9 +19,10 @@
     <!-- Test progress -->
     <div ng-if="!global.data.isFetchingLiveScreening && screening.id > 0">
 
-        <h3 class="text-center">
-            <div class="row">
-                <div class="col-md-12 col-lg-6 col-lg-offset-3">
+        <!-- Test title -->
+        <div class="row">
+            <div class="col-lg-8">
+                <h3 class="title">
                     <ui-editable-standalone-field
                         data-model="screening"
                         data-key="title"
@@ -30,93 +31,152 @@
                         data-save="saveScreening"
                         data-save-callback="saveScreeningCallback">
                     </ui-editable-standalone-field>
-                </div>
-            </div>
 
-            <small>
-                {{ screening.createdAt | mysqlDate:'d / M / yyyy' }} -
-                <a href="#/profiles/{{ profile.id }}">
-                    {{ profile.firstName }} {{ profile.lastName }}
-                </a>
-            </small>
-        </h3>
-
-        <!-- Headings -->
-        <div class="row">
-            <div class="col-md-1 col-md-offset-7">
-                <span class="text-muted">
-                    Score
-                </span>
+                    <span></span>
+                </h3>
             </div>
         </div>
+        <br>
 
-        <div ng-repeat="movement in screening.movements" class="row" style="margin-bottom: 15px;">
+        <!-- Container -->
+        <div class="row no-gutter screening-container">
 
-            <div class="col-md-4 col-md-offset-3" style="line-height: 30px">
-                <div class="col-sm-1 text-muted text-right">
-                    {{ $index + 1 }}
+            <!-- Movement views -->
+            <div class="col-lg-9">
+
+                <div class="col-lg-5 screening-example-view">
+                    <ui-movement-playback
+                        data-title="screening.movements[screeningStep].title"
+                        data-title-align="center"
+                        data-previous-movement="previousMovement"
+                        data-next-movement="nextMovement">
+                    </ui-movement-playback>
                 </div>
-                <div class="col-sm-11">
-                    <ui-editable-standalone-field
-                        data-model="movement"
-                        data-key="title"
-                        data-empty="Title"
-                        data-input-type="text"
-                        data-save="saveScreeningMovement"
-                        data-save-callback="saveScreeningMovementCallback">
-                    </ui-editable-standalone-field>
+
+                <div class="col-lg-7 screening-live-view">
+                    <ui-movement-playback
+                        data-title="'Live View'"
+                        data-previous-movement="false"
+                        data-next-movement="false">
+                    </ui-movement-playback>
+                </div>
+
+                <div class="row no-gutter screening-meta">
+
+                    <!-- Profile details -->
+                    <div class="col-lg-5">
+                        <div class="col-md-5">
+                            <a
+                                href="#/profiles/{{ profile.id }}"
+                                class="aspect-ratio aspect-4-3 card profile-avatar"
+                                style="background-image: url({{ profile.avatarSrc || '' }})">
+                            </a>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="profile-details">
+                                <div>
+                                    <a href="#/profiles/{{ profile.id }}">
+                                        {{ profile.lastName.toUpperCase() }}
+                                    </a>
+                                </div>
+
+                                <!-- Main group -->
+                                <div ng-if="profile.groups.length > 0">
+                                    <a href="#/groups/{{ profile.groups[0].id }}">
+                                        {{ profile.groups[0].name }}
+                                    </a>
+                                </div>
+
+                                <!-- Test date -->
+                                <div>
+                                    Tested on: {{ screening.createdAt | mysqlDate:'d / M / yyyy' }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-7">
+
+                        <ui-editable-standalone-field
+                            data-model="screening.movements[screeningStep]"
+                            data-key="title"
+                            data-empty="Title"
+                            data-input-type="text"
+                            data-save="saveScreeningMovement"
+                            data-save-callback="saveScreeningMovementCallback">
+                        </ui-editable-standalone-field>
+
+                        <!--  -->
+                        <div class="row">
+                            <div class="col-sm-11">
+                                Record, Save, ...
+                            </div>
+                        </div>
+
+                        <!--  -->
+                        <div class="row">
+                            <div class="col-sm-11">
+                                <textarea class="form-control" placeholder="General Notes:"></textarea>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-md-1">
-                {{ movement.score | number:0 }} / {{ movement.scoreMax | number:0 }}
-            </div>
-
-            <!-- Movement actions -->
-            <div class="col-md-1">
-                <div class="btn-group">
-                    <button
-                        class="btn btn-primary btn-circle dropdown-toggle"
-                        data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false">
-
-                        <i class="fa fa-plus"></i>
-                    </button>
-
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a ng-click="global.alert('In Development')" href="javascript:;">
-                                <i class="fa fa-fw fa-circle"></i> Capture movement live
-                            </a>
-                        </li>
-                        <li>
-                            <a ng-click="global.alert('In Development')" href="javascript:;">
-                                <i class="fa fa-fw fa-cloud-upload"></i> Upload movement file
-                            </a>
-                        </li>
-                        <li>
-                            <a ng-click="global.alert('In Development')" href="javascript:;">
-                                <i class="fa fa-fw fa-th"></i> Select existing movement
-                            </a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a ng-click="global.alert('In Development')" href="javascript:;">
-                                <i class="fa fa-fw fa-trash"></i> Remove
-                            </a>
-                        </li>
-                    </ul>
+            <!-- Test list and progress -->
+            <div class="col-lg-3 screening-progress">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="screening-progress-heading">
+                            <div class="movement-title">Test</div>
+                            <div class="movement-score">Score</div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
 
-        <!-- View results -->
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                <a href="#/screenings/{{ screening.id }}" class="btn btn-info">
-                    View Results
-                </a>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="divider-dot"></div>
+                        <div class="divider-end"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div
+                            ng-repeat="movement in screening.movements track by movement.id"
+                            class="screening-progress-movement-row">
+
+                            <a ng-click="screeningStep = $index" href="javascript:;" class="movement-title">
+                                {{ movement.title }}
+                            </a>
+
+                            <div class="movement-score">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="divider-end"></div>
+                        <div class="divider-dot"></div>
+                    </div>
+                </div>
+
+                <!-- Score -->
+                <div class="row">
+                    <div class="col-sm-12">
+                    </div>
+                </div>
+
+                <!-- Percent completion -->
+                <div class="row">
+                    <div class="col-sm-12">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
